metà layout a blocchi completato
iniziare le colonne

--- a/index.html
+++ b/index.html
@@ -23,10 +23,26 @@
       </header>
       <!-- fino a qui ci arriva -->
       <main>
+        <div class="row">
+          <div class="col col-50 h-300">
+          </div>
+          <div class="col col-50 h-300">
+          </div>
+        </div>
+
+          <div class="box">
+            <div class="central-content">
+            </div>
+            <div class="central-content2">
+            </div>
+          </div>
+<!-- box centrali prima delle colonne -->
+
 
 
 
       </main>
+    </div>
 
   </body>
 </html>
