--- a/index.html
+++ b/index.html
@@ -36,13 +36,37 @@
             <div class="central-content2">
             </div>
           </div>
-<!-- box centrali prima delle colonne -->
+          <div class="row">
+            <div class="col col-33 h-300">
+            </div>
+            <div class="col col-33 h-300">
+            </div>
+            <div class="col col-33 h-300">
+            </div>
+
+          <div class="tablebox">
+          </div>
+          <div class="row">
+            <div class="col col-50 h-300">
+            </div>
+            <div class="col col-50 h-300">
+            </div>
+          </div>
+          <!-- dove cè la tabella bianca -->
 
 
-
-
-      </main>
-    </div>
-
+          <footer>
+            <div class="row rowfooter">
+              <div class="col col-25 h-300">
+              </div>
+              <div class="col col-25 h-300">
+              </div>
+              <div class="col col-25 h-300">
+              </div>
+              <div class="col col-25 h-300">
+              </div>
+            </footer>
+          </main>
+        </div>
   </body>
 </html>
