Inseriti alcuni micro-blocchi
inseriti alcuni mircroblocchi e la nav

--- a/index.html
+++ b/index.html
@@ -6,22 +6,57 @@
     <title>Hubspot</title>
   </head>
   <body>
-    <header>
       <div class="maincontent">
+        <header>
         <div class="row">
           <div class="col col-50 h-100">
-          </div>
-          <div class="col col-50 h-100">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col col-50 h-100">
-          </div>
-          <div class="col col-50 h-100">
-          </div>
-        </div>
-      </header>
+           <div class="box-1 centeredbox h-50 w-50">
+             scelta lingua
+           </div>
+           <div class="box-1 h-50 w-50">
+
+           </div>
+         </div>
+
+         <div class="col col-50 h-100">
+           <div class="box-2 f-right">
+             hubspot
+           </div>
+           <div class="box-2 f-right">
+             Log in
+           </div>
+           <div class="box-2 f-right">
+
+           </div>
+         </div>
+
+
+         <div class="row">
+           <div class="col col-50 h-100">
+             <h3 class="logotext">Ubspot</h3>
+           </div>
+           <div class="col col-50 h-100">
+             <nav>
+               <ul class="menu">
+                 <li><a href="#">Software</a></li>
+                 <li><a href="#">Pricing</a></li>
+                 <li><a href="#">Resources</a></li>
+                 <li><a href="#">Partner</a></li>
+                 <li><a href="#">About</a></li>
+               </ul>
+             </nav>
+           </div>
+         </div>
+       </header>
+
+
+
       <!-- fino a qui ci arriva -->
+
+
+
+
+
       <main>
         <div class="row">
           <div class="col col-50 h-300">
@@ -30,7 +65,7 @@
           </div>
         </div>
 
-          <div class="box">
+          <div class="bigbox">
             <div class="central-content">
             </div>
             <div class="central-content2">
@@ -43,6 +78,7 @@
             </div>
             <div class="col col-33 h-300">
             </div>
+          </div>
 
           <div class="tablebox">
           </div>
@@ -53,6 +89,7 @@
             </div>
           </div>
           <!-- dove cè la tabella bianca -->
+        </main>
 
 
           <footer>
@@ -66,7 +103,7 @@
               <div class="col col-25 h-300">
               </div>
             </footer>
-          </main>
-        </div>
+           </div>
+
   </body>
 </html>
