--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
          <div class="col col-50 h-100">
            <div class="box-2 f-right">
-             hubspot
+
            </div>
            <div class="box-2 f-right">
              Log in
@@ -33,7 +33,8 @@
 
          <div class="row">
            <div class="col col-50 h-100">
-             <h3 class="logotext">Ubspot</h3>
+             <!-- <h3 class="logotext">Ubspot</h3> -->
+             <img class="logo"src="img/hublogo.jpg" alt="">
            </div>
            <div class="col col-50 h-100">
              <nav>
@@ -67,6 +68,7 @@
 
           <div class="bigbox">
             <div class="central-content">
+              <img class="dado"src="img/dado.png" alt="">
             </div>
             <div class="central-content2">
             </div>
@@ -81,6 +83,11 @@
           </div>
 
           <div class="tablebox">
+            <div class="tabletext">
+            <h4>Learn and grow with award-winning support and a thriving community behind you.
+You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</h4>
+
+            </div>
           </div>
           <div class="row">
             <div class="col col-50 h-300">
@@ -95,12 +102,48 @@
           <footer>
             <div class="row rowfooter">
               <div class="col col-25 h-300">
+                <h5>Increase your traffic</h2>
+
+                  <ul class="footlink">
+                    <li><a href="#">Software</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Resources</a></li>
+                    <li><a href="#">Partner</a></li>
+                    <li><a href="#">About</a></li>
+                  </ul>
+
               </div>
               <div class="col col-25 h-300">
+                <h5>Increase your traffic</h2>
+                <ul class="footlink">
+                  <li><a href="#">Software</a></li>
+                  <li><a href="#">Pricing</a></li>
+                  <li><a href="#">Resources</a></li>
+                  <li><a href="#">Partner</a></li>
+                  <li><a href="#">About</a></li>
+                </ul>
               </div>
               <div class="col col-25 h-300">
+                <h5>Increase your traffic</h2>
+                <ul class="footlink">
+                  <li><a href="#">Software</a></li>
+                  <li><a href="#">Pricing</a></li>
+                  <li><a href="#">Resources</a></li>
+                  <li><a href="#">Partner</a></li>
+                  <li><a href="#">About</a></li>
+                </ul>
               </div>
               <div class="col col-25 h-300">
+                <h5>Increase your traffic</h2>
+                <ul class="footlink">
+                  <li><a href="#">Software</a></li>
+                  <li><a href="#">Pricing</a></li>
+                  <li><a href="#">Resources</a></li>
+                  <li><a href="#">Partner</a></li>
+                  <li><a href="#">About</a></li>
+                </ul>
+
+
               </div>
             </footer>
            </div>
