--- a/index.html
+++ b/index.html
@@ -10,22 +10,31 @@
         <header>
         <div class="row">
           <div class="col col-50 h-100">
-           <div class="box-1 centeredbox h-50 w-50">
-             scelta lingua
-           </div>
-           <div class="box-1 h-50 w-50">
-
+           <div class="box-1 centeredbox">
+             <select class="select-lingua" name="Lingua">
+               <option value="">English</option>
+               <option value="">Francaise</option>
+               <option value="">Italiano</option>
+             </select>
            </div>
          </div>
 
+
+
+
+
          <div class="col col-50 h-100">
-           <div class="box-2 f-right">
+           <div class="box-2 left1 f-right">
 
            </div>
-           <div class="box-2 f-right">
+           <div class="box-2 left1 f-right">
              Log in
            </div>
            <div class="box-2 f-right">
+             <div class="b1">
+               <!-- <input class="buttonhub" type="submit" name="" value="Gethubspotfree"> -->
+
+             </div>
 
            </div>
          </div>
@@ -33,8 +42,12 @@
 
          <div class="row">
            <div class="col col-50 h-100">
-             <!-- <h3 class="logotext">Ubspot</h3> -->
-             <img class="logo"src="img/hublogo.jpg" alt="">
+             <div class="logo-box">
+               <img class="logo"src="img/hublogo.png" alt="">
+
+             </div>
+
+
            </div>
            <div class="col col-50 h-100">
              <nav>
@@ -61,6 +74,19 @@
       <main>
         <div class="row">
           <div class="col col-50 h-300">
+            <div class="bloccotext">
+              <h1 class="textbox">There's a better way to grow.</h1>
+              <div class="marketing">
+                <p class="grow-text">Marketing, sales good for the business "should also mean good for the customer"</p>
+              </div>
+              <div class="b1">
+                <input class="buttonhub" type="submit" name="" value="Gethubspotfree">
+                <h6>Get started with FREE tools and upgrade as your grow</h6>
+              </div>
+
+
+
+            </div>
           </div>
           <div class="col col-50 h-300">
           </div>
@@ -69,8 +95,22 @@
           <div class="bigbox">
             <div class="central-content">
               <img class="dado"src="img/dado.png" alt="">
+
             </div>
             <div class="central-content2">
+            <h1>Powerful Alone.Better Togheter</h1>
+            <h5 id="hubspot-offers">HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core.</h5>
+
+            </div>
+            <div class="central-content3">
+              <div class="content3">
+                
+
+              </div>
+
+
+
+              </div>
             </div>
           </div>
           <div class="row">
