--- a/index.html
+++ b/index.html
@@ -104,7 +104,12 @@
             </div>
             <div class="central-content3">
               <div class="content3">
-                
+                <div class="box-cassa">
+
+                </div>
+                <div class="box-cassa1">
+
+                </div>
 
               </div>
 
@@ -131,18 +136,33 @@ You don't have to go it alone. Master the inbound methodology and get the most o
           </div>
           <div class="row">
             <div class="col col-50 h-300">
+              <div class="box-content5">
+                <h1>64.500</h1>
+                <h5>customers in over 120 countries growing the air with hubspot</h5>
+              </div>
+              <div class="box-content6">
+                <h1>Start Growing With HubSpot Today</h1>
+                <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier</p>
+                <div class="b1">
+                  <input class="buttonhub" type="submit" name="" value="Gethubspotfree">
+                  <h6>Get started with FREE tools and upgrade as your grow</h6>
+                </div>
+              </div>
+
+
+
             </div>
             <div class="col col-50 h-300">
             </div>
           </div>
-          <!-- dove cè la tabella bianca -->
+
         </main>
 
 
           <footer>
             <div class="row rowfooter">
               <div class="col col-25 h-300">
-                <h5>Increase your traffic</h2>
+                <h5>Increase your traffic</h5>
 
                   <ul class="footlink">
                     <li><a href="#">Software</a></li>
