--- a/index.html
+++ b/index.html
@@ -184,117 +184,11 @@
           </div>
           <div class="row table-row">
             <div class="row first-table-row">
-              <!-- <div class="col col-table-item "> -->
-                <!-- <div class="cell-item">
-                  <div class="row ">
-                    <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="">
-                  </div>
-                  <div class="row ">
-                    <h2>150+</h2>
-                  </div>
-                  <div class="row ">
-                    <p>HubSpot user groups</p>
-                  </div>
-                </div> -->
-              <!-- </div>
-              <div class="col col-table-item"> -->
-                <!-- <div class="cell-item">
-                  <div class="row ">
-                    <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_blog.svg" alt="">
-                  </div>
-                  <div class="row ">
-                    <h2>4.5M+</h2>
-                  </div>
-                  <div class="row ">
-                    <p>monthly visits</p>
-                  </div>
-                </div> -->
-              <!-- </div>
-              <div class="col col-table-item"> -->
-                <!-- <div class="cell-item">
-                  <div class="row ">
-                    <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_academy.svg" alt="">
-                  </div>
-                  <div class="row ">
-                    <h2>155K+</h2>
-                  </div>
-                  <div class="row ">
-                    <p>certified professionals</p>
-                  </div>
-                </div> -->
-              <!-- </div> -->
-              <!-- <div class="col col-table-item">
-                <div class="cell-item">
-                  <div class="row ">
-                    <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_inbound.svg" alt="">
-                  </div>
-                  <div class="row ">
-                    <h2>21+</h2>
-                  </div>
-                  <div class="row ">
-                    <p>registered attendees</p>
-                  </div>
-                </div>
-              </div> -->
-            <!-- </div> -->
-            <!-- <div class="row second-table-row">
-              <div class="col col-table-item">
-                <div class="cell-item">
-                  <div class="row ">
-                    <img src="https://cdn2.hubspot.net/hubfs/53/HubSpot-App-Marketplace-White.png" alt="">
-                  </div>
-                  <div class="row ">
-                    <h2>200+</h2>
-                  </div>
-                  <div class="row ">
-                    <p>integretions</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col col-table-item">
-                <div class="cell-item">
-                  <div class="row ">
-                    <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_globe.svg" alt="">
-                  </div>
-                  <div class="row ">
-                    <h2>6+</h2>
-                  </div>
-                  <div class="row ">
-                    <p>languages</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col col-table-item">
-                <div class="cell-item">
-                  <div class="row ">
-                    <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_followers.svg" alt="">
-                  </div>
-                  <div class="row ">
-                    <h2>2.6M+</h2>
-                  </div>
-                  <div class="row ">
-                    <p>social followers</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col col-table-item">
-                <div class="cell-item">
-                  <div class="row ">
-                    <img src="https://cdn2.hubspot.net/hubfs/53/Lists.svg" alt="">
-                  </div>
-                  <div class="row ">
-                    <h2>5K+</h2>
-                  </div>
-                  <div class="row ">
-                    <p>profiles and counting</p>
-                  </div>
-                </div>
-              </div>
-            </div> -->
+
           </div>
         </div>
       </div>
-      <!-- features box - bottom -->
+      <!-- box2grande -->
       <div class="box2grande-row-bottom">
         <div class="row box2-bottom h-700 container">
           <div class="row">
@@ -334,29 +228,6 @@
       </div>
     </main>
 
-    <footer>
-      <div class="bg-footer">
-          <div class="row container">
-
-            </div>
-            <div class="col height-400 ">
-
-            </div>
-            <div class="col height-400 ">
-
-              </ul>
-            </div>
-            <div class="col height-400 ">
-
-
-            </div>
-          </div>
-
-          <div class="row height-200 container">
-            
-
-          </div>
-      </div>
-    </footer>
+    <footer></footer>
   </body>
 </html>
