--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="box1grande">
           <div class="box-1cont">
             <div class="row h-700 container ">
-              <div class="col width-60p height-500">
+              <div class="col w-60 height-500">
                 <h1>There's a better way to grow.</h1>
                 <p>Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</p>
                 <input id="button-freehub-2" type="button" name="get-free" value="GetHubspotFree">
@@ -63,8 +63,7 @@
 
     <main>
       </div>
-      <!-- features row: top - center - bottom -->
-      <!-- inside row: box-top box-center box-3colonne -->
+
       <div class="box2grande-row-top">
         <div class="row box2-top height-1500 container-large">
           <div class="row box-top">
@@ -85,7 +84,7 @@
               <h2>Free HubSpot CRM</h2>
               <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever</p>
               <h3 >POPOLAR FEATURE</h3>
-              <hr id="hr-special">
+              <hr id="hr-speciale">
               <ul>
                 <li>
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
@@ -182,18 +181,124 @@
               <h1>Learn and grow with award-winning support and a thriving community behind you.</h1>
               <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
           </div>
-          <div class="row table-row">
-            <div class="row first-table-row">
+          <div class="row table-box">
+            <div class="row first-table-box">
+              <div class="col col-table-item ">
+                <div class="cell-item">
+                  <div class="row">
+                  </div>
 
+                  <div class="row ">
+                    <h2>150+</h2>
+                  </div>
+                  <div class="row ">
+                    <p>HubSpot user groups</p>
+                  </div>
+                </div>
+               </div>
+              <div class="col col-table-item">
+                <div class="cell-item">
+                  <div class="row ">
+                  </div>
+
+                  <div class="row ">
+                    <h2>4.5M+</h2>
+                  </div>
+                  <div class="row ">
+                    <p>monthly visits</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col col-table-item">
+                <div class="cell-item">
+                  <div class="row">
+                  </div>
+
+                  <div class="row ">
+                    <h2>155K+</h2>
+                  </div>
+                  <div class="row ">
+                    <p>certified professionals</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col col-table-item">
+                <div class="cell-item">
+                  <div class="row ">
+                  </div>
+
+                  <div class="row ">
+                    <h2>21+</h2>
+                  </div>
+                  <div class="row ">
+                    <p>registered attendees</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row second-table-box">
+              <div class="col col-table-item">
+                <div class="cell-item">
+                  <div class="row ">
+
+                  </div>
+                  <div class="row ">
+                    <h2>200+</h2>
+                  </div>
+                  <div class="row ">
+                    <p>integretions</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col col-table-item">
+                <div class="cell-item">
+                  <div class="row ">
+
+                  </div>
+                  <div class="row ">
+                    <h2>6+</h2>
+                  </div>
+                  <div class="row ">
+                    <p>languages</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col col-table-item">
+                <div class="cell-item">
+                  <div class="row ">
+
+                  </div>
+                  <div class="row ">
+                    <h2>2.6M+</h2>
+                  </div>
+                  <div class="row ">
+                    <p>social followers</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col col-table-item">
+                <div class="cell-item">
+                  <!-- <div class="row ">
+
+                  </div> -->
+                  <div class="row ">
+                    <h2>5K+</h2>
+                  </div>
+                  <div class="row ">
+                    <p>profiles and counting</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <!-- box2grande -->
+      <!--box2grande--->
       <div class="box2grande-row-bottom">
         <div class="row box2-bottom h-700 container">
           <div class="row">
 
-            <div class="col col-spe h-300 w-30">
+            <div class="col col-64 h-300 w-30">
               <h2>64,500</h2>
               <p>customers in over <strong>100</strong> countries growing their businesses with HubSpot</p>
             </div>
@@ -217,10 +322,10 @@
             <div class="col h-300 width-40p">
               <h1>Start Growing With HotSpot Today</h1>
               <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
-              <input id="button-freehub" type="button" name="get-free" value="GetHubspotFree">
+              <input id="button-freehub" type="button" value="GetHubspotFree">
               <p>Get started with FREE tools, or get more with our premium software.</p>
             </div>
-            <div class="col h-300 width-60p">
+            <div class="col h-300 w-60">
               <img src="img/girl.jpg" alt="girl">
             </div>
           </div>
@@ -228,6 +333,76 @@
       </div>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="box-footer">
+          <div class="row container">
+            <div class="col height-400 ">
+              <ul >
+                <li><strong>Increase Your Traffic</strong></li>
+                <li>Ad Software</li>
+                <li>Blog Software</li>
+                <li>SEO Software</li>
+                <li>Social Media Software</li>
+                <li>Content Management System</li>
+              </ul>
+            </div>
+            <div class="col height-400 ">
+              <ul>
+                <li>Connect With Leads</li>
+                <li>Find New Prospects</li>
+                <li>Email Tracking</li>
+                <li>Sales Email Templates</li>
+                <li>Click to Call Your Leads</li>
+                <li>Email Marketing</li>
+              </ul>
+            </div>
+            <div class="col height-400 ">
+              <ul>
+                <li>Close and Manage Leads</li>
+                <li>Document Tracking Tool</li>
+                <li>Meeting Schedule Tool</li>
+                <li>Sales Automation Tool</li>
+                <li>Lead Management Tool</li>
+                <li>Pipeline Management Tool</li>
+              </ul>
+            </div>
+            <div class="col height-400 ">
+              <ul>
+                <li>Support and Tools</li>
+                <li>HubSpot Partners</li>
+                <li>Join a Local User Group</li>
+                <li>Get a free Website Report</li>
+                <li>HubSpot Templates</li>
+                <li>Free Tools & Generators</li>
+                <li>
+                  <input id="b-hs-sup" type="button" name="Hubspot-sup" value="Contact HubSpot Support">
+                </li>
+                <li>
+                  <ul class="list-logos-footer">
+                    <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-youtube-play" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="row h-200 container">
+            <ul class="list-lang-footer">
+              <li>English</li>
+              <li>Deutsch</li>
+              <li>日本語</li>
+              <li>Español</li>
+              <li>Português</li>
+              <li>Français</li>
+            </ul>
+            <hr>
+
+          </div>
+      </div>
+    </footer>
   </body>
 </html>
