--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                 <li>HubSpot Templates</li>
                 <li>Free Tools & Generators</li>
                 <li>
-                  <input id="b-hs-sup" type="button" name="Hubspot-sup" value="Contact HubSpot Support">
+                  <input id="buttonfooter" type="button" name="Hubspot-sup" value="Contact HubSpot Support">
                 </li>
                 <li>
                   <ul class="list-logos-footer">
