--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="nav-bar">
           <div class="row navbar-login h-100 container ">
             <div class="col">
-              <i class="fa fa-globe" aria-hidden="true"></i>
+              <i class="fa fa-globe"></i>
               <span>English</span>
               <i style="vertical-align: middle" class="fa fa-angle-down fa-2x" aria-hidden="true"></i>
               <span>Contact Us</span>
@@ -50,7 +50,7 @@
         <div class="box1grande">
           <div class="box-1cont">
             <div class="row h-700 container ">
-              <div class="col w-60 height-500">
+              <div class="col w-60 h-500">
                 <h1>There's a better way to grow.</h1>
                 <p>Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</p>
                 <input id="button-freehub-2" type="button" name="get-free" value="GetHubspotFree">
@@ -336,7 +336,7 @@
     <footer>
       <div class="box-footer">
           <div class="row container">
-            <div class="col height-400 ">
+            <div class="col h-400 ">
               <ul >
                 <li><strong>Increase Your Traffic</strong></li>
                 <li>Ad Software</li>
@@ -346,7 +346,7 @@
                 <li>Content Management System</li>
               </ul>
             </div>
-            <div class="col height-400 ">
+            <div class="col h-400 ">
               <ul>
                 <li>Connect With Leads</li>
                 <li>Find New Prospects</li>
@@ -356,7 +356,7 @@
                 <li>Email Marketing</li>
               </ul>
             </div>
-            <div class="col height-400 ">
+            <div class="col h-400 ">
               <ul>
                 <li>Close and Manage Leads</li>
                 <li>Document Tracking Tool</li>
@@ -366,7 +366,7 @@
                 <li>Pipeline Management Tool</li>
               </ul>
             </div>
-            <div class="col height-400 ">
+            <div class="col h-400 ">
               <ul>
                 <li>Support and Tools</li>
                 <li>HubSpot Partners</li>
@@ -378,12 +378,12 @@
                   <input id="buttonfooter" type="button" name="Hubspot-sup" value="Contact HubSpot Support">
                 </li>
                 <li>
-                  <ul class="list-logos-footer">
-                    <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
-                    <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
-                    <li><i class="fa fa-youtube-play" aria-hidden="true"></i></li>
-                    <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
-                    <li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
+                  <ul class="social-footer">
+                    <li><i class="fa fa-facebook"></i></li>
+                    <li><i class="fa fa-instagram"></i></li>
+                    <li><i class="fa fa-youtube-play"></i></li>
+                    <li><i class="fa fa-twitter"></i></li>
+                    <li><i class="fa fa-linkedin"></i></li>
                   </ul>
                 </li>
               </ul>
