--- a/index.html
+++ b/index.html
@@ -374,19 +374,21 @@
                 <li>Get a free Website Report</li>
                 <li>HubSpot Templates</li>
                 <li>Free Tools & Generators</li>
-                <li>
-                  <input id="buttonfooter" type="button" name="Hubspot-sup" value="Contact HubSpot Support">
-                </li>
-                <li>
-                  <ul class="social-footer">
-                    <li><i class="fa fa-facebook"></i></li>
-                    <li><i class="fa fa-instagram"></i></li>
-                    <li><i class="fa fa-youtube-play"></i></li>
-                    <li><i class="fa fa-twitter"></i></li>
-                    <li><i class="fa fa-linkedin"></i></li>
-                  </ul>
-                </li>
               </ul>
+              <div class="row h-100">
+                <input id="buttonfooter" type="button" name="Hubspot-sup" value="Contact HubSpot Support">
+                <ul class="social-footer">
+                  <li><i class="fa fa-facebook"></i></li>
+                  <li><i class="fa fa-instagram"></i></li>
+                  <li><i class="fa fa-youtube-play"></i></li>
+                  <li><i class="fa fa-twitter"></i></li>
+                  <li><i class="fa fa-linkedin"></i></li>
+                </ul>
+              </div>
+
+
+
+
             </div>
           </div>
 
@@ -402,6 +404,7 @@
             <hr>
 
           </div>
+
       </div>
     </footer>
   </body>
